Add swager cli for types
