# src/booking/dto/booking.dto.ts
@@ -4,6 +4,17 @@ export type Booking = {
   users: string[];
 };
 
+
+export class BookingDto {
+  id: string;
+  title: string;
+  users: string[];
+  constructor(partial: Partial<CreateBookingDto>) {
+    Object.assign(this, partial);
+  }
+}
+
+
 export class CreateBookingDto {
   id: string;
   title: string;
